add deleteUser
